<resources>
    <string name="app_name">SocialSynchro</string>
    <string name="title_activity_connect">ConnectActivity</string>
    <string name="title_activity_accounts">AccountsActivity</string>
    <string name="title_activity_edit">EditActivity</string>

    <string name="error_key_not_found">Failed to authorize request. API key not found.</string>
    <string name="error_key_exception">Failed to authorize request. Could not retrieve API key. Exception: %s</string>
    <string name="error_storage_permissions">Could not access storage - permission denied.</string>
    <string name="error_login_token">Could not retrieve login token. Error: %s</string>
    <string name="error_twitter_verifier">Could not retrieve Twitter verifier. Error: %s</string>
    <string name="error_twitter_token">Could not retrieve Twitter token. Error: %s</string>
    <string name="error_facebook_token">Could not retrieve Facebook token. Error: %s</string>
    <string name="error_deviantart_code">Could not retrieve DeviantArt code. Error: %s</string>
    <string name="error_access_token">Could not retrieve access token. Error: %s</string>
    <string name="error_account_info">Could not retrieve account info. Error: %s</string>
    <string name="error_account_exists">Account already exists.</string>

    <string name="message_account_synchronization">Account synchronization successful.</string>
    <string name="error_account_synchronization">Account synchronization failed. Error: %s</string>

    <string name="message_content_synchronization">Content synchronization successful.</string>
    <string name="error_content_synchronization">Content synchronization failed. Error: %s</string>

    <string name="message_content_unpublish">Content unpublished successfully.</string>
    <string name="error_content_unpublish">Failed to unpublish value. Error: %s</string>

    <string name="error_request_limit_exceeded">Unable to process request - limit exceeded. Please wait %s and try again.</string>

    <string name="warning_unlocked">Validation rule for %s service has been violated. %s account\'s child post has been unlocked."</string>
    <string name="warning_facebook_app_review">Application is still under Facebook app review process. Because of this, Facebook operations might not work properly yet.</string>
    <string name="warning_title">Warning</string>

    <string name="add_account">Add account</string>
    <string name="remove_account">Remove account</string>
    <string name="synchronize_account">Synchronize account</string>
    <string name="sign_in_status">Sign in status</string>
    <string name="sign_in">Sign in</string>
    <string name="confirm_signing_in">Confirm signing in</string>

    <string name="add_child">Add child</string>
    <string name="remove_child">Remove child</string>
    <string name="save">Save</string>
    <string name="publish">Publish</string>
    <string name="unpublish">Unpublish</string>
    <string name="lock">Lock</string>
    <string name="unlock">Unlock</string>
    <string name="add_attachment">Add attachment</string>
    <string name="confirm">Confirm</string>
    <string name="accounts">Accounts</string>
    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="synchronize">Synchronize</string>
    <string name="statistics">Statistics</string>
    <string name="link">Open link</string>
    <string name="add_new">New...</string>

    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <string name="gallery_image_content_description">Storage image file</string>
    <string name="profile_picture_content_description">Profile picture</string>
    <string name="edit_content_hint">Content</string>
    <string name="edit_title_hint">Title</string>

    <string name="no_title">[no title]</string>
    <string name="online">(Online)</string>
    <string name="offline">(Offline)</string>

    <string name="title_choose_accounts">Choose accounts</string>
    <string name="title_choose_attachment_type">Choose attachment type</string>
    <string name="title_choose_service">Choose service</string>
    <string name="title_activity_test">TestActivity</string>

    <string name="navigation_posts">Posts</string>
    <string name="navigation_accounts">Accounts</string>
    <string name="navigation_edit">Edit</string>
    <string name="navigation_gallery">Gallery</string>

    <string name="hash_char">#</string>
    <string name="add_tags">Add tags</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
