<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".services.twitter.gui.TwitterLoginActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_standard"
            android:background="@color/colorBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textview_signin_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_status"
                    android:layout_gravity="center"
                    style="@style/TextViewStyle" />

                <Button
                    android:id="@+id/button_connect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:layout_gravity="center"
                    android:onClick="buttonConnect_onClick"
                    style="@style/ButtonStyle" />

                <Button
                    android:id="@+id/button_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_signing_in"
                    android:layout_gravity="center"
                    android:onClick="buttonConfirm_onClick"
                    style="@style/ButtonStyle" />

            </LinearLayout>

        </RelativeLayout>

    </android.support.constraint.ConstraintLayout>

</layout>