<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import
            type="android.view.View" />
        <variable
            name="parent"
            type="com.antonina.socialsynchro.common.content.posts.ParentPostContainer" />
        <variable
            name="attachmentAdapter"
            type="com.antonina.socialsynchro.common.gui.adapters.AttachmentEditAdapter" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <HorizontalScrollView
            android:id="@+id/horizontal_scrollview"
            android:visibility="@{parent.isVisible() ? View.VISIBLE : View.GONE}"
            style="@style/ButtonsScrollViewStyle">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.antonina.socialsynchro.common.gui.other.StateButton
                    android:id="@+id/button_save"
                    android:tooltipText="@string/save"
                    android:background="@drawable/icon_floppydisc"
                    style="@style/IconButtonStyle" />

                <com.antonina.socialsynchro.common.gui.other.StateButton
                    android:id="@+id/button_add_attachment"
                    android:tooltipText="@string/add_attachment"
                    android:background="@drawable/icon_clip"
                    style="@style/IconButtonStyle" />

                <com.antonina.socialsynchro.common.gui.other.StateButton
                    android:id="@+id/button_publish"
                    android:tooltipText="@string/publish"
                    android:background="@drawable/icon_publish"
                    style="@style/IconButtonStyle" />

                <com.antonina.socialsynchro.common.gui.other.StateButton
                    android:id="@+id/button_unpublish"
                    android:tooltipText="@string/unpublish"
                    android:background="@drawable/icon_unpublish"
                    style="@style/IconButtonStyle" />

            </LinearLayout>

        </HorizontalScrollView>

        <FrameLayout
            style="@style/PanelFrameLayoutStyle">

            <LinearLayout
                android:visibility="@{parent.isVisible() ? View.VISIBLE : View.GONE}"
                style="@style/ContentLinearLayoutStyle">

                <EditText
                    android:id="@+id/edittext_child_content"
                    android:text="@={parent.content}"
                    tools:ignore="Autofill"
                    style="@style/ContentEditTextStyle" />

            </LinearLayout>

            <FrameLayout
                android:id="@+id/title_panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    style="@style/PanelLinearLayoutStyle">

                    <HorizontalScrollView
                        style="@style/PanelScrollViewStyle">

                        <LinearLayout
                            style="@style/PanelScrollableLinearLayoutStyle">

                            <EditText
                                android:id="@+id/edittext_child_title"
                                android:text="@={parent.title}"
                                tools:ignore="Autofill"
                                style="@style/TitleEditTextStyle" />

                        </LinearLayout>

                    </HorizontalScrollView>

                </LinearLayout>

                <FrameLayout
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:layout_gravity="left">

                    <ImageView
                        android:id="@+id/imageview_profile_picture"
                        android:layout_width="@dimen/profile_picture_background_size"
                        android:layout_height="@dimen/profile_picture_background_size"
                        android:src="@drawable/background_avatar" />

                    <ProgressBar
                        android:visibility="@{parent.loading ? View.VISIBLE : View.GONE}"
                        style="@style/ProgressBarStyle" />

                </FrameLayout>

            </FrameLayout>

        </FrameLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_attachments"
            android:visibility="@{parent.isVisible() ? View.VISIBLE : View.GONE}"
            android:adapter="@{attachmentAdapter}"
            style="@style/AttachmentsRecyclerViewStyle" />

    </LinearLayout>

</layout>